# May_I_Help_You_GameEngine

./: .gitignore  README.md  Schedule.txt
Project/: CMakeLists.txt  CMakePresets.json  Environment.cmake  ProjectList.cmake
Project/Engine/Client/: CMakeLists.txt
Project/Engine/Client/Code/: main.cpp
Project/Engine/CommonHeader/: CommonHeader.h  MIHYCommonHeader.h
Project/Engine/Core/: CMakeLists.txt
Project/Engine/Core/Code/Private/: MIHYCore_DataStruct.cpp  MIHYCore_Framework.cpp  MIHYCore_Module_Manager.cpp
Project/Engine/Core/Code/Public/: MIHYCore.h  MIHYCore_Common_Struct.h  MIHYCore_DataStruct.h  MIHYCore_Framework.h  MIHYCore_Module_Manager.h  MIHYCore_PCH.h
Project/Engine/Module/: CMakeLists.txt
Project/Engine/Module/Code/Private/: MIHYModule.cpp  MIHYModule_Manager.cpp
Project/Engine/Module/Code/Public/: MIHYModule.h  MIHYModule_Manager.h  MIHYModule_PCH.h
Project/Engine/Platform/: CMakeLists.txt
Project/Engine/Platform/Code/Private/Windows/: MIHYPlatform_GUI.cpp  MIHYPlatform_Library_Loader.cpp
Project/Engine/Platform/Code/Public/: MIHYPlatform.h  MIHYPlatform_API.h  MIHYPlatform_GUI.h  MIHYPlatform_Library_Loader.h  MIHYPlatform_PCH.h  MIHYPlatform_Platform.h
Project/Engine/Vulkan/: CMakeLists.txt
Project/Engine/Vulkan/Code/Private/: MIHYVulkan_Device.cpp  MIHYVulkan_Function.cpp
Project/Engine/Vulkan/Code/Public/: MIHYVulkan.h  MIHYVulkan_Device.h  MIHYVulkan_Function.h  MIHYVulkan_PCH.h
Setup/: Setup_Windows.bat
